root/libgo/go/cmd/go/testdata/src/syntaxerror/x_test.go
../../../../../../../../gcc/libgo/go/cmd/go/testdata/src/syntaxerror/x_test.go